--- a/index.html
+++ b/index.html
@@ -63,24 +63,24 @@
             </b>
             </tr>
             <tr>
-                <th> 1994 </th>
-                <th> Melhor Filme </th>
-                <th> Venceu </th>
+                <td> 1994 </td>
+                <td> Melhor Filme </td>
+                <td> Venceu </td>
             </tr>
             <tr>
-                <th> 1994 </th>
-                <th> Melhor Direção </th>
-                <th> Venceu</th>
+                <td> 1994 </td>
+                <td> Melhor Direção </td>
+                <td> Venceu</td>
             </tr>
             <tr>
-                <th> 1994 </th>
-                <th> Melhor Figurino </th>
-                <th> Indicado </th>
+                <td> 1994 </td>
+                <td> Melhor Figurino </td>
+                <td> Indicado </td>
             </tr>
             <tr>
-                <th> 1994 </th>
-                <th> Melhor Escritor </th>
-                <th> Venceu </th>
+                <td> 1994 </td>
+                <td> Melhor Escritor </td>
+                <td> Venceu </td>
             </tr>
         </table>
 
