--- a/formulario.html
+++ b/formulario.html
@@ -2,7 +2,7 @@
 <!--Atividade realizada pelo aluno Kauan Batista Silveira do primeiro período-->
 <html lang="pt-br">
     <head>
-        <title> Login </title>
+        <title> FORMULARIO </title>
         <style type="text/css">
             body {
                 background: linear-gradient(#1a1a1a, #454545);
