--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                 <img src="jp_posterFilme_JurassicPark1.jpg" alt="Poster do Filme Jurassic Park 1">
                             </figure>
                             <div class="texto-sinopse">
-                                <p>Jurassic Park (no Brasil, Jurassic Park: O Parque dos Dinossauros; em Portugal, Parque Jurássico) é um filme estadunidense de ficção científica e aventura dirigido por Steven Spielberg e baseado no livro homônimo escrito por Michael Crichton.</p>
+                                <p><em>Jurassic Park</em> (no Brasil: <em>Jurassic Park: O Parque dos Dinossauros</em>; em Portugal: </em>Parque Jurássico</em>) é um filme estadunidense de ficção científica e aventura dirigido por Steven Spielberg e baseado no livro homônimo escrito por Michael Crichton.</p>
                                 <p>É estrelado por Sam Neill, Laura Dern, Jeff Goldblum, Richard Attenborough, Ariana Richards, Joseph Mazzello, Samuel L. Jackson e Bob Peck. O filme é centrado na fictícia Isla Nublar, onde um filantropo bilionário e uma pequena equipe de geneticistas criam um parque temático em uma ilha, onde as principais atrações são variadas espécies de dinossauros recriados através da engenharia genética.</p>
                             </div>
                         </div>
@@ -188,7 +188,7 @@
                                 <img src="jp_posterFilme_JurassicPark2.jpg" alt="Poster do Filme Jurassic Park 2">
                             </figure>
                             <div class="texto-sinopse">
-                                <p>The Lost World: Jurassic Park (no Brasil, Jurassic Park 2 O Mundo perdido; em Portugal, O Mundo Perdido: Jurassic park) é um filme estadunidense de 1997 de ficção científica aventura, dirigido por Steven Spielberg, sendo o segundo da franquia Jurassic Park.</p>
+                                <p><em>The Lost World: Jurassic Park</em> (no Brasil: <em>Jurassic Park 2 O Mundo perdido</em>; em Portugal: <em>O Mundo Perdido: Jurassic Park</em>) é um filme estadunidense de 1997 de ficção científica aventura, dirigido por Steven Spielberg, sendo o segundo da franquia Jurassic Park.</p>
                                 <p>O filme foi produzido por Gerald R. Molen e Colin Wilson. O roteiro foi escrito por David Koepp, baseado no romance The Lost World, de Michael Crichton. O filme é estrelado por Jeff Goldblum, Julianne Moore, Vince Vaughn, Pete Postlethwaite, Richard Schiff, Arliss Howard, Thomas F. Duffy, Vanessa Lee Chester e Richard Attenborough.</p>
                             </div>
                         </div>
@@ -201,7 +201,7 @@
                                 <img src="jp_posterFilme_JurassicPark3.jpg" alt="Poster do Filme Jurassic Park 3">
                             </figure>
                             <div class="texto-sinopse">
-                                <p>Jurassic Park III (No Brasil, Jurassic Park 3 e em Portugal, Parque Jurássico III) é um filme estadunidense de ficção científica e aventura lançado originalmente em 18 de julho de 2001 nos cinemas estadunidenses.</p>
+                                <p><em>Jurassic Park III</em> (No Brasil: <em>Jurassic Park 3</em> e em Portugal: <em>Parque Jurássico III</em>) é um filme estadunidense de ficção científica e aventura lançado originalmente em 18 de julho de 2001 nos cinemas estadunidenses.</p>
                                 <p>É a continuação de The Lost World: Jurassic Park, de 1997. Foi dirigido por Joe Johnston e produzido por Steven Spielberg, Kathleen Kennedy e Larry J. Franco. Este filme, faz parte da franquia Jurassic Park, sendo o terceiro filme desta. Foi o primeiro da saga que não foi dirigido por Steven Spielberg.</p>
                             </div>
                         </div>
@@ -214,7 +214,7 @@
                                 <img src="jp_posterFilme_JurassicPark4.jpg" alt="Poster do Filme Jurassic World">
                             </figure>
                             <div class="texto-sinopse">
-                                <p>Jurassic World (no Brasil Jurassic World: O Mundo dos Dinossauros; em Portugal Mundo Jurássico) é um filme estadunidense de ficção científica, aventura, e ação dirigido por Colin Trevorrow.</p>
+                                <p><em>Jurassic World</em> (no Brasil: <em>Jurassic World: O Mundo dos Dinossauros</em>; em Portugal: <em>Mundo Jurássico</em>) é um filme estadunidense de ficção científica, aventura, e ação dirigido por Colin Trevorrow.</p>
                                 <p>É o quarto filme da franquia Jurassic Park, e foi produzido pela Universal Pictures em parceria com a Amblin Entertainment e com a Legendary Pictures. O longa teve seus efeitos especiais feitos pela Industrial Light & Magic (CGI) e pela Legacy FX (animatrônicos).</p>
                             </div>
                         </div>
