--- a/login.html
+++ b/login.html
@@ -2,90 +2,37 @@
 <!--Atividade realizada pelo aluno Kauan Batista Silveira do primeiro período-->
 <html lang="pt-br">
     <head>
-        <title> Login </title>
-        <style type="text/css">
-
-            html {
-                height: 100%;
-                margin: 0;
-            }
-
-            body {
-                background: linear-gradient(#1a1a1a, #454545);
-                max-height: 100%;
-            }
-
-            .box {
-                border: 5px solid rgb(67, 8, 8);
-                border-radius: 10px;
-                display: center;
-                margin-right: 80px;
-                margin-left: 80px;
-                margin-bottom: 20px;
-                background: linear-gradient(rgb(176, 14, 14), rgb(133, 6, 6));
-                align-items: center;
-                padding: 20px;
-                justify-content: center;
-            }
-
-            #logo {
-                border: 5px solid rgb(123, 16, 16);
-                border-radius: 5px;
-                align-items: center;
-                text-align: center;
-                margin: 10px;
-                background-color: #1a1a1a;
-                padding: 10px;
-            }
-
-            form {
-                border: 3px solid rgb(204, 186, 24);
-                border-radius: 7px;
-                text-align: center;
-                font-size: 20px;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                background-color: rgb(255, 233, 137);
-                padding: 30px;
-                margin: 50px;
-                margin-right: 250px;
-                margin-left: 250px;
-                box-shadow: 5px 5px 5px rgb(90, 0, 0);
-            }
-
-            #titulo-formulario {
-                border: 3px solid rgb(188, 146, 21);
-                border-radius: 7px;
-                text-align: center;
-                font-size: 30px;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                background-color: rgb(239, 208, 71);
-                padding: 10px;
-                margin-right: 200px;
-                margin-left: 200px;
-                display: center;
-                box-shadow: 5px 5px 5px rgb(90, 0, 0);
-            }
-        </style>
+        <title>LOGIN</title>
+        <link rel="stylesheet" href="stylo.css">
     </head>
-    <body><div class="box">
-        <header>
-            <div id="logo">
-                <img src="jp_topoLogotipo.png" alt="Logotipo do Site">
-            </div>
-        </header>
-
-        <main>
-            <section>
-                <div id="titulo-formulario">LOGIN</div>
-                <form action="adm.html">
-                    <label for="email">Login/E-mail: </label>
-                    <input type="email" id="email" placeholder="Escreva o seu email..."><br>
-                    <label for="senha">Senha: </label>
-                    <input type="password" id="senha" placeholder="Digite a sua senha..."><br>
-
-                    <input type="submit" value="LOGAR">
-                </form>
-            </section>
-        </main>
+    <body>
+        <div class="box">
+            <header>
+                <div id="logo">
+                    <img src="jp_topoLogotipo.png" alt="Logotipo Jurassic Page">
+                </div>
+                <nav class="menu-container">
+                    <div class="menus"><a href="index.html" target="_blank">PÁGINA PRINCIPAL</a></div>
+                    <div class="menus"><a href="formulario.html" target="_blank">FORMULÁRIO</a></div>
+                </nav>
+            </header>
+            
+            <main>
+                <section>
+                    <div class="titulos">LOGIN</div>
+                    <div id="edit_form">
+                        <form action="adm.html">
+                            <input type="email" id="email" class ="edit_input" placeholder="Escreva o seu email..."><br>
+                            <input type="password" id="senha" class="edit_input" placeholder="Digite a sua senha..."><br>
+    
+                            <input type="submit" id="button_login" value="LOGAR">
+                        </form>
+                    </div>
+                </section>    
+            </main>
+        </div>
+        <footer id="rodape">
+            JURASSIC PAGE - O seu canal de informações sobre Jurassic Park
+        </footer>
     </body>
 </html>
