--- a/formulario.html
+++ b/formulario.html
@@ -3,72 +3,7 @@
 <html lang="pt-br">
     <head>
         <title> FORMULARIO </title>
-        <style type="text/css">
-            body {
-                background: linear-gradient(#1a1a1a, #454545);
-            }
-
-            .box {
-                border: 5px solid rgb(67, 8, 8);
-                border-radius: 10px;
-                display: center;
-                margin-right: 80px;
-                margin-left: 80px;
-                margin-bottom: 20px;
-                background: linear-gradient(rgb(176, 14, 14), rgb(133, 6, 6));
-                align-items: center;
-                padding: 20px;
-                justify-content: center;
-            }
-
-            #logo {
-                border: 5px solid rgb(123, 16, 16);
-                border-radius: 5px;
-                align-items: center;
-                text-align: center;
-                margin: 10px;
-                background-color: #1a1a1a;
-                padding: 10px;
-            }
-
-            form {
-                border: 3px solid rgb(204, 186, 24);
-                border-radius: 7px;
-                text-align: center;
-                font-size: 20px;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                background-color: rgb(255, 233, 137);
-                padding: 30px;
-                margin: 50px;
-                margin-right: 150px;
-                margin-left: 150px;
-                box-shadow: 5px 5px 5px rgb(90, 0, 0);
-            }
-
-            #boxform {
-                border: 3px solid rgb(230, 218, 129);
-                border-radius: 7px;
-                background-color: rgb(250, 242, 185);
-                padding: 30px;
-                margin-right: 100px;
-                margin-left: 100px;
-                text-align: justify;
-            }
-
-            #titulo-formulario {
-                border: 3px solid rgb(188, 146, 21);
-                border-radius: 7px;
-                text-align: center;
-                font-size: 30px;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-                background-color: rgb(239, 208, 71);
-                padding: 10px;
-                margin-right: 200px;
-                margin-left: 200px;
-                display: center;
-                box-shadow: 5px 5px 5px rgb(90, 0, 0);
-            }
-        </style>
+        <link rel="stylesheet" href="stylo.css">
     </head>
     <body>
         <main>
@@ -77,14 +12,12 @@
                     <img src="jp_topoLogotipo.png" alt="Logotipo Jurassic Park">
                 </header>
 
-                <h1 id="titulo-formulario"> FORMULÁRIO </h1>
+                <div class="titulos"> FORMULÁRIO </div>
 
-                <form>
-                    <label>Nome: </label>
-                    <input type="text" placeholder="Escreva o seu nome..."><br>
-
-                    <label>E-mail: </label>
-                    <input type="email" placeholder="Escreva o seu email..."><br>
+                <div class="edit_form"><form>
+                    <input type="text" class="edit_input" placeholder="Escreva o seu nome..."><br>
+                    
+                    <input type="email" class="edit_input" placeholder="Escreva o seu email..."><br>
 
                     <label>Idade: </label>
                     <input type="number" min="0" max="130"><br>
@@ -112,9 +45,9 @@
                         <input type="checkbox" name="nenhum"> NENHUM DESTES ACIMA<br>
                     </div>
                     <br>
-                    <input type="submit" value="Enviar dados">
-                    <input type="reset" value="Limpar todos os dados">
-                </form>
+                    <input type="submit" class="button_submit" value="Enviar dados">
+                    <input type="reset" id="button_clear" value="Limpar todos os dados">
+                </form></div>
             </section>
         </main>
     </body>
