--- a/login.html
+++ b/login.html
@@ -20,12 +20,12 @@
             <main>
                 <section>
                     <div class="titulos">LOGIN</div>
-                    <div id="edit_form">
+                    <div class="edit_form">
                         <form action="adm.html">
-                            <input type="email" id="email" class ="edit_input" placeholder="Escreva o seu email..."><br>
+                            <input type="email" id="email" class="edit_input" placeholder="Escreva o seu email..."><br>
                             <input type="password" id="senha" class="edit_input" placeholder="Digite a sua senha..."><br>
     
-                            <input type="submit" id="button_login" value="LOGAR">
+                            <input type="submit" class="button_submit" value="LOGAR">
                         </form>
                     </div>
                 </section>    
