--- a/adm.html
+++ b/adm.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
+<!--Atividade realizada pelo aluno Kauan Batista Silveira do primeiro período-->
 <html lang="pt-br">
     <head>
         <title>ADMINISTRACAO</title>
-        <style type="text/css">
-            html {
-                height: 100%;
-                margin: 0;
-            }
-            body {
-                background: linear-gradient(#1a1a1a, #454545);
-                background-size: cover;
-                background-repeat: no-repeat, no-repeat;
-            }
-        </style>
+        <link rel="stylesheet" href="stylo.css">
     </head>
     <body>
-
+        <div class="box">
+            <header>
+                <div id="logo">
+                    <img src="jp_topoLogotipo.png" alt="Logotipo Jurassic Page">
+                </div>
+                <nav class="menu-container">
+                    <div class="menus"><a href="index.html" target="_blank">PÁGINA PRINCIPAL</a></div>
+                </nav>
+            </header>
+            <main>
+                <section>
+                    <div class="titulos">LOGIN</div>
+                </section>
+            </main>
+        </div>
+        <footer id="rodape">
+            JURASSIC PAGE - O seu canal de informações sobre Jurassic Park
+        </footer>
     </body>
 </html>
