--- a/formulario.html
+++ b/formulario.html
@@ -50,5 +50,8 @@
                 </form></div>
             </section>
         </main>
+        <footer id="rodape">
+            JURASSIC PAGE - O seu canal de informações sobre Jurassic Park
+        </footer>
     </body>
 </html>
